Bug 750356: fix signed/unsigned comparison build warnings in ReusableTileStoreOGL.cpp. r=chrislord